--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,12 +1,14 @@
 {
   "importMap": "import_map.json",
   "tasks": {
-    "build": "silverbullet plug:compile hello.plug.yaml",
-    "watch": "silverbullet plug:compile hello.plug.yaml -w"
+    "build": "silverbullet plug:compile --importmap import_map.json hello.plug.yaml",
+    "watch": "silverbullet plug:compile -w --importmap import_map.json hello.plug.yaml"
   },
   "lint": {
     "rules": {
-      "exclude": ["no-explicit-any"]
+      "exclude": [
+        "no-explicit-any"
+      ]
     }
   },
   "fmt": {
