--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,8 +1,8 @@
 {
   "importMap": "import_map.json",
   "tasks": {
-    "build": "silverbullet plug:compile --importmap import_map.json hello.plug.yaml",
-    "watch": "silverbullet plug:compile -w --importmap import_map.json hello.plug.yaml"
+    "build": "silverbullet plug:compile --importmap import_map.json leaflet.plug.yaml",
+    "watch": "silverbullet plug:compile -w --importmap import_map.json leaflet.plug.yaml"
   },
   "lint": {
     "rules": {
